# appscan

./: Cargo.toml  README.md  out.txt
src/: dns.rs  http.rs  main.rs
