[package]
name = "appscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive", "cargo"] }
duct = "0.13.7"
rayon = "1.9.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
spinners = "4.1.1"
spinoff = "0.8.0"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.1"
